<resources>
    <string name="app_name">IntelliSOFT Consulting</string>
    <string name="lname">Last Name</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="register">Save</string>
    <string name="fname">First Name</string>
    <string name="dob">D.O.B</string>
    <string name="gender">Gender</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_having_account">Already Having an Account?</string>
    <string name="log_in">Log In</string>
    <string name="not_having_account">Not Having an Account?</string>
    <string name="sign_up">Registration Page</string>
    <string name="logout">Logout</string>
    <string name="patient">Patient Report</string>
    <string name="forma">Form A</string>
    <string name="formb">Form B</string>
    <string name="drugs">Drugs</string>
    <string name="dates">Dates</string>
    <string name="ghs">GeneralHealth</string>
    <string name="diets">Diet</string>
    <string name="comments">Comments</string>
    <string name="vital">Vitals Form</string>
    <string name="height">Height(cm)</string>
    <string name="weight">Weight(kg)</string>
    <string name="bmi">BMI</string>
    <string name="dt">Date</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="poor">Poor</string>
    <string name="good">Good</string>
    <string name="radio_good">GOOD</string>
    <string name="radio_poor">POOR</string>
    <string name="radio_yes">YESS</string>
    <string name="radio_no">NOO</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="select_date">Select Date</string>

    <string-array name = "gender">
        <!-- <item></item> -->
        <item>Male</item>
        <item>Female</item>
    </string-array>
</resources>
